Bug fix - overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1160,3 +1160,7 @@ section .container {
     transform: translateX(-50%);
   }
 }
+
+.publications-item {
+  right: 0;
+}
